downgrade from java 21 syntax  to 8